tests/behavior/error/null_pointer_arithmetic3.bz
function main()
{
	let p: ?*int32 = null;
	let _ = p + 1;
}
